@@ -1,6 +1,6 @@
 /*
  * AKFAvatar SDL backend
- * Copyright (c) 2007,2008,2009,2010,2011,2012,2013,2014
+ * Copyright (c) 2007,2008,2009,2010,2011,2012,2013,2014,2015
  * Andreas K. Foerster <akf@akfoerster.de>
  *
  * required standards: C99
